tests/fixtures/invalid/pow_str_int_set.py
# Cannot call pow() with Str, Int, Set[int]
x = pow("hello", 1, {1, 2, 3})
